Move JS and CSS to individual files

--- a/index.html
+++ b/index.html
@@ -1,64 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>WIP</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Wine Quiz</title>
+	<style>
+		
+	</style>
 </head>
-<body style="background-color:#353434">
-	<div class="indexForm">
-		<div class="headerWrapper">
-			<h1>WIP Website</h1>
-		</div>
-		<div class="bodyWrapper">
-			<div class="tabs">
-				Tab Bar
-				<button class="tabButton">python</button>
-				<button class="tabButton">java</button>
-				<button class="tabButton">yaml</button>
-				<button class="tabButton">ipynb</button>
-				<button class="tabButton">html</button>
-				<button class="tabButton">js</button>
-				<button class="tabButton">css</button>
-			</div>
-
-			<div class="demoWrapper" id="demosList">
-				Demos Bars
-				<div class="demoBlock">
-					<div class="demoText">
-						<h2>Roulette Systems Tester</h2>
-						<p>Uses simulated spins of a roulette wheel to make assumptions about different systems</p>
-					</div>
-					<div class="demoCode">
-						<img src="images/roulette-stats.JPG" class="demoImg">
-					</div>
-				</div>
-				<div class="demoBlock">
-					<div class="demoText">
-						<h2>Roulette Systems Tester</h2>
-						<p>Uses simulated spins of a roulette wheel to make assumptions about different systems</p>
-					</div>
-					<div class="demoCode">
-						<img src="images/roulette-stats.JPG" class="demoImg">
-					</div>
-				</div>
-				<div class="demoBlock">
-					<div class="demoText">
-						<h2>Roulette Systems Tester</h2>
-						<p>Uses simulated spins of a roulette wheel to make assumptions about different systems</p>
-					</div>
-					<div class="demoCode">
-						<img src="images/roulette-stats.JPG" class="demoImg">
-					</div>
-				</div>
-
-
-
-
-			</div>
-
-
-
+<body>
+	<div class="quiz-container">
+		<div id="quiz">
+			<!-- Quiz content will be injected here by JavaScript -->
 		</div>
 	</div>
+
+
+	<script src="bg.js"></script>
 </body>
 </html>
