Fix stylesheet references

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Wine Quiz</title>
-	<style>
-		
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="quiz-container">
@@ -14,7 +12,6 @@
 			<!-- Quiz content will be injected here by JavaScript -->
 		</div>
 	</div>
-
 
 	<script src="bg.js"></script>
 </body>
