+CDC Logo, Logo Styling

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="quiz-container">
-		<div id="quiz">
-			<!-- Quiz content will be injected here by JavaScript -->
-		</div>
-	</div>
+    <div class="outer-container">
+        <img src="assets/logo.png" alt="logo" class="logo">
+        <br>
+        <div class="quiz-container">
+            <div id="quiz">
+                <!-- Quiz content will be injected here by JavaScript -->
+            </div>
+        </div>
+    </div>
 
 	<script src="bg.js"></script>
 </body>
